--- a/33joivalidate/package.json
+++ b/33joivalidate/package.json
@@ -6,6 +6,7 @@
     "ejs": "^3.1.6",
     "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
+    "joi": "^17.5.0",
     "method-override": "^3.0.0",
     "mongoose": "^6.0.14",
     "multer": "^1.4.3"
