--- a/cadastro/package.json
+++ b/cadastro/package.json
@@ -3,9 +3,11 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
+    "ejs-mate": "^3.0.0",
     "express": "^4.17.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.1.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.4"
   }
 }
